k8s/db/mongodb-write-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-write
  namespace: db
spec:
  ports:
    - port: 27017
      targetPort: 27017
      nodePort: 32018
  type: NodePort
  selector:
    app: mongodb-write
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-write
  namespace: db
spec:
  serviceName: mongodb-write
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-write
  template:
    metadata:
      labels:
        app: mongodb-write
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-write-data
              mountPath: /data/db
          livenessProbe:
            exec:
              command:
                - mongo
                - --eval
                - db.adminCommand('ping')
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - mongo
                - --eval
                - db.adminCommand('ping')
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 512Mi
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - mongodb-write
              topologyKey: "kubernetes.io/hostname"
  volumeClaimTemplates:
    - metadata:
        name: mongo-write-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
