k8s/db/postgres-primary-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-primary
  namespace: db
spec:
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
  selector:
    app: postgres-primary
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-primary
  namespace: db
spec:
  serviceName: postgres-primary
  replicas: 1
  selector:
    matchLabels:
      app: postgres-primary
  template:
    metadata:
      labels:
        app: postgres-primary
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: postgres
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pg-primary-data
              mountPath: /var/lib/postgresql/data
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d/00_init.sql
              subPath: 00_init.sql
            - name: pg-hba
              mountPath: /etc/postgresql/pg_hba.conf
              subPath: pg_hba.conf
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - user
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - user
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 512Mi
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - postgres-primary
              topologyKey: "kubernetes.io/hostname"
      volumes:
        - name: init-sql
          configMap:
            name: postgres-init-sql
        - name: pg-hba
          configMap:
            name: postgres-pg-hba
  volumeClaimTemplates:
    - metadata:
        name: pg-primary-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
